--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
         <input type="text" placeholder="Digite seu nome" class="my-username">
         <button onclick="login()">Entrar</button>
     </div>
-    <div class="participants-background displayNone" onclick="displayParticipants()"></div>
+    <div class="participants-background displayNone" onclick="notDisplayParticipantsSection()"></div>
     <section class="displayNone">
         <p>Escolha um contato para enviar mensagem:</p>
         <ul class="participants-list">
-            <li>
+            <li class="selected" onclick="selectReceiver(this)">
                 <ion-icon name="people"></ion-icon>
                 <p>Todos</p>
+                <ion-icon name="checkmark" class="check"></ion-icon>
             </li>
         </ul>
         <p>Escolha a visibilidade:</p>
         <ul class="visibility-list">
-            <li>
+            <li class="selected" onclick="selectVisibility(this)">
                 <ion-icon name="lock-open"></ion-icon>
                 <p>Público</p>
+                <ion-icon name="checkmark" class="check"></ion-icon>
             </li>
-            <li>
+            <li onclick="selectVisibility(this)">
                 <ion-icon name="lock-closed"></ion-icon>
                 <p>Reservadamente</p>
             </li>
@@ -42,13 +44,13 @@
     </section>
     <header>
         <img src="image/logo.png" alt="" onclick="reload()">
-        <ion-icon name="people" onclick="displayParticipants()"></ion-icon>
+        <ion-icon name="people" onclick="displayParticipantsSection()"></ion-icon>
     </header>
     <main><ol></ol></main>
     <footer>
         <div class="input-box">
             <input type="text" placeholder="Escreva aqui...">
-            <p>Enviando para Maria (reservadamente)</p>
+            <p class="message-info">Enviando para Maria (reservadamente)</p>
         </div>
         <ion-icon name="paper-plane-outline" onclick="sendMessage()"></ion-icon>
     </footer>
